force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>