force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/Amount_Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_Foreign_Currency__c</fullName>
    <label>Amount Foreign Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>