force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/Credit_Memo_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Reasons__c</fullName>
    <label>Credit Memo Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>