force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/Foreign_Amount_without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Amount_without_Symbol__c</fullName>
    <label>Foreign Amount without Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>