force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <label>Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>