force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/OSA_Contract_Number_RA__c.field-meta.xml
<CustomField>
    <fullName>OSA_Contract_Number_RA__c</fullName>
    <label>OSA Contract Number RA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>