force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/PO_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Check_Number__c</fullName>
    <label>PO Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>