force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/Reference_ID_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID_Bundle__c</fullName>
    <label>Reference ID Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>