force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/fields/Subsidiary_no_hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_no_hierarchy__c</fullName>
    <label>Subsidiary no hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>