force-app/main/default/objects/T_qtc_Active_Credit_Memo_Tax_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_ID__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Name__c</columns>
    <columns>Currency__c</columns>
    <columns>Subsidiary_no_hierarchy__c</columns>
    <columns>Date__c</columns>
    <columns>Created_From__c</columns>
    <columns>Period__c</columns>
    <columns>PO_Check_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>